src/tests/function-declarations/4.txt
function-declarations/4.c:6:1: error: conflicting types for function declaration f
 float f(int a, int b);
 ^
